Fix colors and fix ca brand link

--- a/ca/templates/ca/base.html
+++ b/ca/templates/ca/base.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 text-left">
-                    <a href="{% url 'ca:home' %}"><img src="{% static 'ca/img/logo.png' %}" class='nav-brand-logo'
+                    <a href="{% url 'main_page:index' %}"><img src="{% static 'ca/img/logo.png' %}" class='nav-brand-logo'
                             alt="" srcset=""></a>
                 </div>
 
