--- a/ca/templates/ca/index.html
+++ b/ca/templates/ca/index.html
@@ -3,152 +3,162 @@
 {% block title %} Advitiya-2020 {%endblock%}
 {% block body %}
 
-    <div class="ftco-blocks-cover-1">
-        <div class="ftco-cover-1 main-back overlay">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-lg-6 text-center">
-                        <div class='main-heading'></div>
-                    </div>
+<div class="ftco-blocks-cover-1">
+    <div class="ftco-cover-1 main-back overlay">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-lg-6 text-center">
+                    <div class='main-heading'></div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="container about-advitiya">
-        <div class="row justify-content-center text-center mb-5">
+<div class="container about-advitiya">
+    <div class="row justify-content-center text-center mb-5">
+        <div class="col-md-6">
+            <span class="text-primary">Who We Are?</span>
+            <h2 class="mb-4"><strong>About Advitiya</strong></h2>
+            <h4>
+                IIT Ropar is organizing the fourth edition of it's annual Technical Festival “Advitiya” in the first
+                week of of February consisting of 72 hours of intense competitions and technical events Advitiya has
+                already evolved into a brand within four years of
+                its inception and a publicity paradise that ensures stupendous brand visibility for sponsors With an
+                array of events that consolidate the vision for times to come, Advitiya 20’ is ready to set the
+                scientific spirits soaring and technological
+                temper ablaze Advitiya will witness a wide range of scientific and technical activities and novel events
+                from fields like Coding, Robotics, Finance, Design and Entrepreneurship with total prizes worth as high
+                as 8 lakh Rupees
+            </h4>
+
+        </div>
+    </div>
+
+
+</div>
+<div class="about-advitiya perks">
+    <div class="container perks-heading">
+        <div class="row justify-content-center text-center">
             <div class="col-md-6">
-                <span class="text-primary">Who We Are?</span>
-                <h2 class="mb-4"><strong>About Advitiya</strong></h2>
-                <h4>
-                    IIT Ropar is organizing the fourth edition of it's annual Technical Festival “Advitiya” in the first week of of February consisting of 72 hours of intense competitions and technical events Advitiya has already evolved into a brand within four years of
-                    its inception and a publicity paradise that ensures stupendous brand visibility for sponsors With an array of events that consolidate the vision for times to come, Advitiya 20’ is ready to set the scientific spirits soaring and technological
-                    temper ablaze Advitiya will witness a wide range of scientific and technical activities and novel events from fields like Coding, Robotics, Finance, Design and Entrepreneurship with total prizes worth as high as 8 lakh Rupees
-                </h4>
-
+                <div class="mb-4">Incentives</div>
             </div>
         </div>
-
-
     </div>
-    <div class="about-advitiya perks">
-        <div class="container perks-heading">
-            <div class="row justify-content-center text-center">
-                <div class="col-md-6">
-                    <div class="mb-4">Incentives</div>
-                </div>
-            </div>
-        </div>
-        <div class="perks-list">
+    <div class="perks-list">
 
-            <div class="container wrapper">
-                <div class="row feature-2">
-                    <div class=" feature-2-contents">
-                        <div class="">
-                            <!-- <span class="caption">01.</span> -->
-                            <h3 class="mb-5">Free Pro Night Passes</h3>
-                            <p>Top 50 CAs will get pro-night passes for free</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container wrapper">
-                <div class="row feature-2">
-                    <div class=" feature-2-contents">
-                        <div class="fixed-content">
-                            <!-- <span class="caption">02.</span> -->
-                            <h3 class="mb-5">Goodies</h3>
-                            <p>CAs who bring more than 50 participants will get goodies and t-shirts of Advitiya 2020 for free.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container wrapper">
-                <div class="row align-items-stretch feature-2">
-                    <div class=" feature-2-contents">
-                        <div class="fixed-content">
-                            <!-- <span class="caption">03.</span> -->
-                            <h3 class="mb-5 justify-content-center">Cash Prices</h3>
-                            <p>CAs will get cash prizes based on the number of participants referred by them.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container wrapper">
-                <div class="row align-items-stretch feature-2">
-                    <div class=" feature-2-contents">
-                        <div class="fixed-content">
-                            <!-- <span class="caption">04.</span> -->
-                            <h3 class="mb-5 justify-content-center">Lucrative Prices</h3>
-                            <p>Top 10 CAs will get a certificate of excellence and goodies worth ₹ 15,000/- for free.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container wrapper">
-                <div class="row align-items-stretch feature-2">
-                    <div class=" feature-2-contents">
-                        <div class="fixed-content">
-                            <!-- <span class="caption">05.</span> -->
-                            <h3 class="mb-5 justify-content-center">Free Accomodation</h3>
-                            <p>Get waivers on accomodation during fest</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container wrapper">
-                <div class="row align-items-stretch feature-2">
-                    <div class=" feature-2-contents">
-                        <div class="fixed-content">
-                            <!-- <span class="caption">05.</span> -->
-                            <h3 class="mb-5">Certificates</h3>
-                            <p>All CAs will get certificate of participation.</p>
-                        </div>
+        <div class="container wrapper">
+            <div class="row feature-2">
+                <div class=" feature-2-contents">
+                    <div class="">
+                        <!-- <span class="caption">01.</span> -->
+                        <h3 class="mb-5">Free Pro Night Passes</h3>
+                        <p>Top 50 CAs will get pro-night passes for free</p>
                     </div>
                 </div>
             </div>
         </div>
-
+        <div class="container wrapper">
+            <div class="row feature-2">
+                <div class=" feature-2-contents">
+                    <div class="fixed-content">
+                        <!-- <span class="caption">02.</span> -->
+                        <h3 class="mb-5">Goodies</h3>
+                        <p>CAs who bring more than 50 participants will get goodies and t-shirts of Advitiya 2020 for
+                            free.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container wrapper">
+            <div class="row align-items-stretch feature-2">
+                <div class=" feature-2-contents">
+                    <div class="fixed-content">
+                        <!-- <span class="caption">03.</span> -->
+                        <h3 class="mb-5 justify-content-center">Cash Prices</h3>
+                        <p>CAs will get cash prizes based on the number of participants referred by them.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container wrapper">
+            <div class="row align-items-stretch feature-2">
+                <div class=" feature-2-contents">
+                    <div class="fixed-content">
+                        <!-- <span class="caption">04.</span> -->
+                        <h3 class="mb-5 justify-content-center">Lucrative Prices</h3>
+                        <p>Top 10 CAs will get a certificate of excellence and goodies worth ₹ 15,000/- for free.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container wrapper">
+            <div class="row align-items-stretch feature-2">
+                <div class=" feature-2-contents">
+                    <div class="fixed-content">
+                        <!-- <span class="caption">05.</span> -->
+                        <h3 class="mb-5 justify-content-center">Free Accomodation</h3>
+                        <p>Get waivers on accomodation during fest</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container wrapper">
+            <div class="row align-items-stretch feature-2">
+                <div class=" feature-2-contents">
+                    <div class="fixed-content">
+                        <!-- <span class="caption">05.</span> -->
+                        <h3 class="mb-5">Certificates</h3>
+                        <p>All CAs will get certificate of participation.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
+</div>
 
-    <div class="container about-advitiya">
-        <div class="row justify-content-center text-center mb-5">
-            <div class="col-md-6">
-                <h2 class="mb-4">What we expect of you...</h2>
-                <p>Spread awareness about Advitiya-19 via word of mouth and ensure more and more people get to know about it</p>
-            </div>
+
+<div class="container about-advitiya">
+    <div class="row justify-content-center text-center mb-5">
+        <div class="col-md-6">
+            <h2 class="mb-4">What we expect of you...</h2>
+            <p>Spread awareness about Advitiya-19 via word of mouth and ensure more and more people get to know about it
+            </p>
         </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="card" >
-                    <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
-                    <div class="card-body">
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="card">
+                <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                <div class="card-body">
                     <h3 class="card-title">Publicity</h3>
-                    <p class="card-text">Display posters of Advitiya-20 on receiving them on the college bulletin and notice boards for everyone to see</p>
-                    </div>
+                    <p class="card-text">Display posters of Advitiya-20 on receiving them on the college bulletin and
+                        notice boards for everyone to see</p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="card" style="height:100%">
-                    <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
-                    <div class="card-body">
+        </div>
+        <div class="col-sm-4">
+            <div class="card" style="height:100%">
+                <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                <div class="card-body">
                     <h3 class="card-title">Organize Events</h3>
-                    <p class="card-text">Organize workshops & events in your college or city under the guidance of Advitiya, IIT Ropar.</p>
-                    </div>
+                    <p class="card-text">Organize workshops & events in your college or city under the guidance of
+                        Advitiya, IIT Ropar.</p>
                 </div>
             </div>
-            <div class="col-sm-4">    
-                <div class="card">
-                    <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
-                    <div class="card-body">
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                <div class="card-body">
                     <h3 class="card-title">Word of Mouth</h3>
-                    <p class="card-text">Spread awareness about Advitiya-19 via word of mouth and ensure more and more people get to know about it</p>
-                    </div>
+                    <p class="card-text">Spread awareness about Advitiya-19 via word of mouth and ensure more and more
+                        people get to know about it</p>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+</div>
+</div>
 {% endblock %}
-    
