Added favicon and images

--- a/ca/templates/ca/index.html
+++ b/ca/templates/ca/index.html
@@ -130,7 +130,7 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="card">
-                <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                <img src="{% static 'ca/img/public.jpg' %}" height="160" width="12" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Publicity</h3>
                     <p class="card-text">Display posters of Advitiya-20 on receiving them on the college bulletin and
@@ -140,7 +140,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card" style="height:100%">
-                <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                <img src="{% static 'ca/img/events.jpg' %}" height="160" width="12" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Organize Events</h3>
                     <p class="card-text">Organize workshops & events in your college or city under the guidance of
@@ -150,7 +150,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <img src="{% static 'ca/img/logo.png' %}" height="160" width="12" class="card-img-top" alt="...">
+                <img src="{% static 'ca/img/wom.jpg' %}" height="160" width="12" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Word of Mouth</h3>
                     <p class="card-text">Spread awareness about Advitiya-19 via word of mouth and ensure more and more
