--- a/ca/templates/ca/base.html
+++ b/ca/templates/ca/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="{% static 'ca/css/style.css' %}" rel="stylesheet">
     <title>{% block title %} Advitiya{%endblock%} </title>
-    <link rel="shortcut icon" type="image/png" href="{% static 'ca/img/favicon.jpg' %}">
+    <link rel="shortcut icon" type="image/png" href="#">
 </head>
 
 <body>
