--- a/ca/templates/ca/index.html
+++ b/ca/templates/ca/index.html
@@ -87,7 +87,7 @@
                     <div class="fixed-content">
                         <!-- <span class="caption">04.</span> -->
                         <h3 class="mb-5 justify-content-center">Lucrative Prices</h3>
-                        <p>Top 10 CAs will get a certificate of excellence and goodies worth ₹ 15,000/- for free.</p>
+                        <p>Top 10 CAs will get a certificate of excellence and goodies for free.</p>
                     </div>
                 </div>
             </div>
