--- a/ca/templates/ca/index.html
+++ b/ca/templates/ca/index.html
@@ -20,17 +20,16 @@
         <div class="col-md-6">
             <span class="text-primary">Who We Are?</span>
             <h2 class="mb-4"><strong>About Advitiya</strong></h2>
-            <h4>
-                IIT Ropar is organizing the fourth edition of it's annual Technical Festival “Advitiya” in the first
+            <p style="text-align:justify; font-size:1.3em">
+                IIT Ropar is organizing the fourth edition of it's annual Technical Festival "Advitiya" in the first
                 week of of February consisting of 72 hours of intense competitions and technical events Advitiya has
-                already evolved into a brand within four years of
-                its inception and a publicity paradise that ensures stupendous brand visibility for sponsors With an
-                array of events that consolidate the vision for times to come, Advitiya 20’ is ready to set the
-                scientific spirits soaring and technological
-                temper ablaze Advitiya will witness a wide range of scientific and technical activities and novel events
-                from fields like Coding, Robotics, Finance, Design and Entrepreneurship with total prizes worth as high
-                as 8 lakh Rupees
-            </h4>
+                already evolved into a brand within four years of its inception and a publicity paradise that ensures
+                stupendous brand visibility for sponsors With an array of activities that consolidate the vision for
+                times to come, Advitiya 2020 is ready to set the scientific spirits soaring and technological temper
+                ablaze Advitiya will witness a wide range of scientific and technical activities and novel events from
+                fields like Coding, Robotics, Finance, Design and Entrepreneurship with total prizes worth as high as 8
+                lakh Rupees.
+            </p>
 
         </div>
     </div>
