main_page template added

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -32,6 +32,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
+    <script src="{% static 'main_page/js/confer.bundle.js' %}"></script>
+        <!-- Active -->
+    <script src="{% static 'main_page/js/active.js' %}"></script>    
+    <script src="{% static 'main_page/js/jquery.min.js' %}"></script>
 </body>
 
 </html>
