--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -7,7 +7,11 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'ca/img/favicon.jpg' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link href="{% static 'main_page/css/style.css' %}" rel="stylesheet">
     <title>{% block title %} Advitiya{%endblock%} </title>
 </head>
@@ -15,11 +19,7 @@
 <body>
     {% block body %}
     {% endblock %}
-    <!-- <footer class="mastfoot navbar-fixed-bottom mt-auto">
-        <div class="inner">
-          <p>Made with love by Technical Team<a href="https://twitter.com/mdo">@IIT Ropar</a>.</p>
-        </div>
-      </footer> -->
+   
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -35,7 +35,7 @@
     <script src="{% static 'main_page/js/confer.bundle.js' %}"></script>
         <!-- Active -->
     <script src="{% static 'main_page/js/active.js' %}"></script>    
-    <script src="{% static 'main_page/js/jquery.min.js' %}"></script>
+    <!-- <script src="{% static 'main_page/js/jquery.min.js' %}"></script> -->
 </body>
 
 </html>
