Fix ca register page and contact details

--- a/ca/templates/ca/base.html
+++ b/ca/templates/ca/base.html
@@ -71,9 +71,9 @@
                 <div class="col-lg-2 col-xs-12 about-company"></div>
                 <div class="col-lg-4 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                    <p> Birla Seeds Farms, Rupnagar, Punjab 140111</p>
-                    <p class="mb-0"><i class="fa fa-phone mr-3"></i>0188 124 2105</p>
-                    <p><i class="fa fa-envelope-o mr-3"></i>info@iitrpr.ac.in</p>
+                    <p>Indian Institute of Technology Ropar, Bara Phool, Birla Seed Farms, Rupnagar,Punjab, INDIA 140001 </p>
+                    <p class="mb-0"><i class="fa fa-phone mr-3"></i>+91 9690911442</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>advitiya.pr@iitrpr.ac.in</p>
                 </div>
             </div>
             <div class="row mt-5">
