--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 
 <head>
@@ -10,19 +11,64 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-    <link href="{% static 'main_page/css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'main_page/css/rest_style.css' %}" rel="stylesheet">
     <title>{% block title %} Advitiya{%endblock%} </title>
 </head>
-
-<body>
+<body>         
+    <header>
+        <nav class="navbar bg-transparent">
+            <a class="navbar-brand" href="{% url 'main_page:index' %}">
+            <img src="{% static 'ca/img/logo.png' %}" width="150" height="80" alt="">
+            </a>
+            <div class="col-6 text-right">
+                {% if not user.is_authenticated %}
+                <a href="{% provider_login_url 'google' %}"><img src="{% static 'ca/img/gsignin.png' %}" width="100" height="80" ></a>
+                {% else %}
+                <a href="{% url 'ca:account_logout' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
+                    class="fas fa-sign-out-alt"></i>SIGN OUT</a>
+                    {% endif %}   
+        </nav>
+    </header>
+    
+                
     {% block body %}
     {% endblock %}
-   
+   <!-- Footer Area Start -->
+   <div class="footer">
+        <div class="jumbotron">
+             <div class="row">
+            <div class="col-lg-6 col-xs-12 about-company">
+                <h2>About Us</h2>
+                <p style="font-size:15px;">The annual technical festival of IIT ropar “Adivtiya ”, marks a 3 day
+                    journey consisting of various competitions spread across Robotics, Management, Coding,
+                    Designing, Gaming, Astronomy, Aero-modelling and Quizzing. Apart from
+                    the competitions, talks and workshops are few of the interesting events of the fest. The
+                    upcoming Advitiya is going to be held in February 2020.</p>
+
+                <p><a href="https://www.facebook.com/advitiya.iitrpr/"><i
+                            class="fab fa-facebook-square fa-3x mr-1"></i></a><a
+                        href="https://twitter.com/advitiyaiitrpr?lang=en"><i
+                            class="fab fa-twitter-square fa-3x"></i></a><a
+                        href="https://www.instagram.com/advitiya_iitrpr/?hl=en"><i
+                            class="fab fa-instagram ml-1 fa-3x"></i></a></p>
+            </div>
+            <div class="col-lg-2 col-xs-12 about-company"></div>
+            <div class="col-lg-4 col-xs-12 location">
+                <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                <p> Birla Seeds Farms, Rupnagar, Punjab 140111</p>
+                <p class="mb-0"><i class="fa fa-phone mr-3"></i>0188 124 2105</p>
+                <p><i class="fa fa-envelope-o mr-3"></i>info@iitrpr.ac.in</p>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://kit.fontawesome.com/a9af552946.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
