--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -1,7 +1,21 @@
-{% extends "main_page/base.html" %}
 {% load static %}
+<!DOCTYPE html>
 
-{% block body %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="{% static 'ca/img/favicon.jpg' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+    <link href="{% static 'main_page/css/style.css' %}" rel="stylesheet">
+    <title> Advitiya </title>
+</head>
+
+<body>
 <div id="preloader">
   <div class="loader"></div>
 </div>
@@ -15,8 +29,9 @@
           <nav class="classy-navbar justify-content-between" id="conferNav">
 
               <!-- Logo -->
-              <a class="nav-brand" href=" {% url 'main_page:index' %}"><img src="{% static 'main_page/img/core-img/logo.png' %}" alt=""></a>
-
+              <a class="navbar-brand" href="{% url 'main_page:index' %}">
+              <img src="{% static 'ca/img/logo.png' %}" width="150" height="80" alt="">
+            </a>
               <!-- Navbar Toggler -->
               <div class="classy-navbar-toggler">
                   <span class="navbarToggler"><span></span><span></span><span></span></span>
@@ -33,32 +48,14 @@
                       <ul id="nav">
                           <li class="active"><a href="{% url 'main_page:index' %}">Home</a></li>
                           <li><a href="#">Pages</a>
-                              <ul class="dropdown">
-                                  <li><a href="#">- Home</a></li>
-                                  <li><a href="#">- About Us</a></li>
-                                  <li><a href="#">- Speakears</a></li>
-                                  <li><a href="#">- Schedule</a></li>
-                                  <li><a href="#">- Tickets</a></li>
-                                  <li><a href="#">- Blog</a></li>
-                                  <li><a href="#">- Single Blog</a></li>
-                                  <li><a href="#">- Contact</a></li>
-                                  <li><a href="#">- Dropdown</a>
-                                      <ul class="dropdown">
-                                          <li><a href="#">- Dropdown Item</a></li>
-                                          <li><a href="#">- Dropdown Item</a></li>
-                                          <li><a href="#">- Dropdown Item</a></li>
-                                          <li><a href="#">- Dropdown Item</a></li>
-                                      </ul>
-                                  </li>
-                              </ul>
                           </li>
-                          <li><a href="#">Speakears</a></li>
-                          <li><a href="#">Blog</a></li>
-                          <li><a href="#">Contact</a></li>
+                          <li><a href="#">Team</a></li>
+                          <li><a href="{% url 'main_page:events'%}">Events</a></li>
+                          <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
                       </ul>
 
-                      <!-- Get Tickets Button -->
-                      <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <!-- Signing in -->
+                      <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Sign in <i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
                   <!-- Nav End -->
               </div>
@@ -1025,7 +1022,9 @@
               <div class="col-12 col-sm-6 col-lg-3">
                   <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                       <!-- Footer Logo -->
-                      <a href="#" class="footer-logo"><img src="{% static 'main_page/img/core-img/logo.png' %}" alt=""></a>
+                      <a class="navbar-brand" href="{% url 'main_page:index' %}">
+                            <img src="{% static 'ca/img/logo.png' %}" width="150" height="80" alt="">
+                          </a>
                       <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain.</p>
 
                       <!-- Social Info -->
@@ -1130,4 +1129,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
       </div>
   </div>
 </footer>
-{% endblock %}
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="{% static 'main_page/js/confer.bundle.js' %}"></script>
+        <!-- Active -->
+    <script src="{% static 'main_page/js/active.js' %}"></script>    
+    <!-- <script src="{% static 'main_page/js/jquery.min.js' %}"></script> -->
+</body>
+
+</html>
